--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         window.getSelection().removeAllRanges();
         }
         </script>
-    <img class="bg" src = "particles.gif">
+    <img class="bg" src = "bg5.jpg">
     <div class="all"> 
    <section class="logo">
         <div class="content">
@@ -39,8 +39,6 @@
             <li><a href="https://steamcommunity.com/id/ruwbine/"><img src = "icons/icons8-steam-circled.svg"></a></li>
             <li><a href="https://vk.com/aeterywww"><img src = "icons/icons8-vk-circled.svg"></a></li>
             <li><a href="https://www.pinterest.com/ruwb1ne/"><img src = "icons/icons8-pinterest.svg"></a></li>
-          
-            
         </ul>
     </nav>
 </section>
